exports[`MultiRange supports having a selected item 1`] = `
<div
  className="root">
  <div
    className="items">
    <div
      className="item">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="itemLabel">
          label1
        </span>
      </label>
    </div>
    <div
      className="item itemSelected">
      <label>
        <input
          checked={true}
          className="itemRadio itemRadioSelected"
          onChange={[Function]}
          type="radio" />
        <span
          className="itemLabel itemLabelSelected">
          label2
        </span>
      </label>
    </div>
    <div
      className="item">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="itemLabel">
          label3
        </span>
      </label>
    </div>
    <div
      className="item">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="itemLabel">
          label4
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`MultiRange supports passing items values 1`] = `
<div
  className="root">
  <div
    className="items">
    <div
      className="item">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="itemLabel">
          label1
        </span>
      </label>
    </div>
    <div
      className="item">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="itemLabel">
          label2
        </span>
      </label>
    </div>
    <div
      className="item">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="itemLabel">
          label3
        </span>
      </label>
    </div>
    <div
      className="item">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function]}
          type="radio" />
        <span
          className="itemLabel">
          label4
        </span>
      </label>
    </div>
  </div>
</div>
`;
